# vcpkg-cmake-integration

./: .gitignore  README.md  vcpkg.cmake
.github/workflows/: test.yaml
examples/: test-fmt.cpp  test-plog.cpp
examples/manifest/: CMakeLists.txt  vcpkg.json
test/: CMakeLists.txt
test/manifest/: CMakeLists.txt  vcpkg.json
test/manifest_packages_autogen/: CMakeLists.txt  README.md
